# GameEngine

./: CMakeLists.txt
res/shaders/: first_fragment_shader.txt  first_vertex_shader.txt
src/: main.cpp
src/TextureProgram/: Texture_Program.cpp  Texture_Program.h
src/auxillary/: GLnum_plus.h
src/buffers/: buffer_virtual.h  ebo.cpp  ebo.h  vbo.cpp  vbo.h
src/resource manager/: ResourceManager.cpp  ResourceManager.h
src/resource_manager/: ResourceManager.cpp  ResourceManager.h
src/shaders/: Shader.cpp  Shader.h  Shader_Program.cpp  Shader_Program.h
